# DSMySQL

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/badges/: clang.json  gcc.json  msvc.json
.github/workflows/: ci.yml  release.yml  update-compiler-badges.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake  ProjectOptions.cmake  ds_mysqlConfig.cmake.in
docs/: BUILD.md  COVERAGE.md  DEVELOPMENT.md  INTEGRATION_TESTS.md  QUICKREF.md  RELEASE.md
examples/: CMakeLists.txt  basic_query.cpp  schema_generation.cpp  tables_with_constraints.cpp
lib/: CMakeLists.txt
lib/include/: ds_mysql.hpp
lib/include/ds_mysql/: async_query.hpp  charset_name.hpp  col.hpp  column_field.hpp  column_field_base_core.hpp  column_field_base_numeric.hpp  column_field_base_temporal.hpp  column_field_base_text.hpp  column_field_base_varchar.hpp  config.hpp  connect_options.hpp  connection_pool.hpp  credentials.hpp  database.hpp  database_name.hpp  ds_mysql.hpp  fixed_string.hpp  host_name.hpp  member_name_reflection.hpp  metadata.hpp  mysql_connection.hpp  mysql_database.hpp  mysql_metadata.hpp  name_reflection.hpp  numeric_field.hpp  port_number.hpp  prepared_statement.hpp  schema_generator.hpp  server_cursor.hpp  sql.hpp  sql_core.hpp  sql_dcl.hpp  sql_ddl.hpp  sql_dml.hpp  sql_dql.hpp  sql_extension.hpp  sql_identifiers.hpp  sql_mutation_shared.hpp  sql_numeric.hpp  sql_predicates.hpp  (+9 more)
scripts/: act-ci-full.sh  act-ci.sh  act-release.sh  release.sh
scripts/act/: act-ci-full.sh  act-ci.sh  act-release.sh
scripts/ci/: act-ci-full.sh  act-ci.sh
scripts/release/: act-release.sh  release.sh
scripts/util/: format.sh
tests/: CMakeLists.txt
tests/integration/: .env.example  CMakeLists.txt  main.cpp
tests/integration/cmake/: DockerIntegration.cmake
tests/integration/docker/: docker-compose.yml  docker_down.sh  docker_up.sh  init-db.sql  run_tests_wrapper.sh
tests/integration/mysql/: test_query_builder.cpp  ut_expected_expect.hpp
tests/unit/: CMakeLists.txt  test_dcl.cpp  test_ddl.cpp  test_dml.cpp  test_dql.cpp  test_dql_extensions.cpp  test_field_types.cpp  test_umbrella_header.cpp  test_valid_table.cpp
